--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@
     color: rgba(0, 0, 0, 0.65);
     background: #1880c9 !important;
     padding-left: 10px !important;
+    padding-right: 10px !important;
 }
 
 .ant-layout-sider {
@@ -62,7 +63,7 @@
 }
 
 .listDiv .listActive {
-    background: #e2eefa;
+    background: #91cdfa;
 }
 
 .ant-list-split .ant-list-item {
@@ -75,7 +76,7 @@
     font-size: 1rem;
 }
 .uploadBox {
-    margin-left: 10px;
+    /*margin-left: 10px;*/
 }
 
 #root, .ant-layout {
