--- a/src/App.css
+++ b/src/App.css
@@ -313,3 +313,13 @@ div.circle-picker-container {
 .results-header {
     margin-bottom: 0px;
 }
+.startLoading{
+    position: absolute !important;
+    display: block;
+    width: 100%;
+    height: 100%;
+    z-index: 999999;
+    box-sizing: content-box;
+}
+.startLoading>.ant-spin-dot{top: 100px;
+}
